ui.frontend/src/main/webpack/etisalat/styles/core-components/tabs/_tabs.scss
/* ... */
// common css en

.cmp_tabs--mobile {
  .cmp-teaser__action-link {
    font-size: $font12;
    font-weight: get-font-weight("medium");
    letter-spacing: toRem(1.6);
    line-height: toRem(16);
    padding: toRem(2.85);
    position: relative;
    text-transform: uppercase;

    &::before {
      border-width: 0 toRem(1) toRem(1) 0;
      content: "";
      line-height: 1;
      padding: toRem(4);
      position: absolute;
      right: toRem(-13);
      top: 50%;
      transform: translateY(-50%) rotate(135deg);
      transition: all 0.3s ease-in-out;

      @include rtlBlock() {
        left: toRem(-13);
        right: auto;
        transform: translateY(-50%) rotate(-45deg);
      }
    }
  }

  .panel {
    border-radius: 0;
    margin: 0;
    width: 100%;
  }

  .panel-collapse {
    padding: toRem(16);

    @include respond-to-max($phone) {
      // background-color: $white-gray1;
      padding: 0 toRem(16) toRem(16);
    }
  }

  .cmp-teaser {
    @include respond-to-max($phone) {
      border-radius: toRem(4);
      box-shadow: 0 5px 10px 0 rgb(0 0 0 / 10%);
    }

    &__content {
      @include respond-to-max($phone) {
        background-color: $white;
        padding: toRem(16) toRem(16) toRem(32);
        border-radius: 4px;
      }
    }

    &__action-container {
      @include respond-to-max($phone) {
        margin-top: toRem(16);
      }
    }

    &__title {
      color: $almost-black;
      font-weight: get-font-weight("bold");
      margin-bottom: toRem(16);
      margin-top: 0;

      @include font-family-lato;

      @include rtlBlock {
        font-weight: get-font-weight("light");
      }
    }

    &__description {
      ol {
        padding-left: toRem(35);

        li {
          padding-left: toRem(10);
        }
      }

      ol li,
      ul li {
        font-size: $font16;
      }

      p {
        color: $paracolor;
        font-size: $font14;
        font-weight: get-font-weight("medium");
        line-height: toRem(19);

        @include font-family-lato;
      }
    }
  }

  svg {
    @include respond-to-max($desktop) {
      height: toRem(40);
      width: toRem(35);
    }
  }

  .get-more-title-small h3 {
    color: $almost-black;
    font-size: toRem(20);
    letter-spacing: normal;
    line-height: 1.6;
    margin: 0;
  }

  .nav-view-wrapp.panel > a,
  .nav-view-wrapp.panel > a.collapsed {
    align-items: center;
    display: flex;
    flex-direction: row-reverse;
    justify-content: flex-end;
    letter-spacing: normal;
    padding: toRem(10) 0 toRem(10) toRem(16) !important;
    padding-left: toRem(15);
    position: relative;
  }

  .nav-view-wrapp {
    &.panel {
      & > a {
        color: $main-green;
        font-size: $font16;

        &::before {
          border: solid $grey4;
          border-width: 0 toRem(1) toRem(1) 0;
          content: "";
          line-height: 1;
          padding: 4px !important;
          position: absolute;
          right: toRem(30);
          top: 50%;
          transform: translateY(-70%) rotate(45deg);
          transition: all 0.3s ease-in-out;
          z-index: 1;
        }
      }
    }

    span {
      display: inline-block;
      margin-right: toRem(15);
    }
  }

  .nav-view-wrapp.panel > a.collapsed {
    color: $dark-gray;
    font-weight: get-font-weight("regular");

    &::before {
      transform: translateY(-50%) rotate(-135deg);
    }
  }

  .nav-view-wrapp.panel > :not(a.collapsed) {
    font-size: $font14;
    font-weight: get-font-weight("heavy");

    @include font-family-lato;
  }

  .get-more-section {
    .desktop-body {
      background-color: $sand-white-50;
      display: flex;
      flex-direction: column;
      padding: 0 toRem(16);

      .get-more-details {
        -ms-flex-order: 2;
        order: 2;

        .get-more-title-small {
          margin-bottom: toRem(16);
        }
      }
    }
  }

  .learn-more-wrap {
    font-size: toRem(16);
    line-height: toRem(16);
    text-align: left;
  }

  .get-more-paragraph p {
    color: $steel-grey;
    font-size: toRem(14);
    letter-spacing: normal;
    line-height: 1.43;
    margin: 0;
  }

  .cmp-image__image {
    border-radius: toRem(5) toRem(5) 0 0;
    height: toRem(250);
  }
}

// mobile en

.benefits-section .benefits-mobile.collapsed .icon circle,
.benefits-section .benefits-mobile.collapsed .icon path,
.benefits-section .benefits-mobile.collapsed .icon polygon,
.benefits-section .benefits-mobile.collapsed .icon polyline {
  stroke: $gray-fill;
  stroke-width: toRem(1);
}
/* ... */

